css/style.css
.ui.menu.fixed {
    background-color: #212121;
    height: 50px;
    box-shadow: none;
    border: none;
}

.fast-table-toggles {
    --block-width: 200px;

    position: fixed;
    width: var(--block-width);

    bottom: 32px;
    left: calc(100vw - var(--block-width));
}

.locale-picker {
    position: absolute !important;
    right: 0;
    margin: 9px;
    height: 30px;
}

.locale-picker img {
    height: 30px!important;
}

.locale-picker .ui.dropdown .menu {
    border: none !important;
    box-shadow: none !important;
    background: none !important;
    margin-top: 0.5em !important;
}

.ui.menu .locale-picker .ui.dropdown .menu > .item {
    padding: 0 !important;
    height: 2em;
    margin: 0;
    margin-bottom: 0.5rem;
}

.statistics-module {
    position: absolute;
    left: 2em;
    top: 5em;
    width: 18em;
    z-index: 99;
}

body {
    margin-top: 5em;
    height: auto;
    overflow-y: scroll !important;
    overflow-x: auto;
}

div.item.item-member {
    position: relative;
}

div.item.item-friend {
    position: relative;
}

div.item.item-member::before {
    content: "\f2bd";
    font-family: Icons;
    position: absolute;
    right: 0.75em;
}

div.item.item-friend::before {
    content: "\f164";
    font-family: Icons;
    position: absolute;
    right: 0.75em;
}

tr[data-tr-timestamp], tr[data-tr-mark] {
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.sftools-loader {
    opacity: 65%;
    animation: spin 1.2s linear infinite;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

[data-tr-timestamp] .ui.label {
    padding-left: 6px;
    padding-right: 6px;
    min-width: 1em;
}

@keyframes spin {
    100% {
        transform:rotate(360deg);
    }
}

.profiles-disabled {
    pointer-events: none;
    opacity: 50%;
}

.css-timestamp {
    position: absolute;
    top: 0.25em;
    left: 4.5em;
    font-size: 85%;
}

@media only screen and (max-width: 992px) {
    .paste-target {
        display: none;
    }
}

#stats-list > div {
    font-size: 90%;
}

.paste-target {
    position: absolute;
    right: 2em;
    top: 5em;
    border: 3px #a9d1ce dashed;
    width: 8.5em;
    color: #5f827f;
    height: 8.5em;
    text-align: center;
    padding: 0.5em;
    pointer-events: none;
    display: flex;
    flex-direction: column;
}

.darker-placeholder ::placeholder {
    color: black !important;
    opacity: 50% !important;
}

.css-op-select-el {
    position: relative;
}

.css-op-select > .css-op-select-el::before {
    content: "\f00c";
    font-family: Icons;
    position: absolute;
    left: -1.5em;
    top: 0px;
}

.css-a-blank {
    color: white;
    text-decoration: none;
    line-height: 1 !important;
}

.detail-content span {
    font-size: 70%;
}

.css-b-bold b {
    font-weight: bold;
}

body.dimmed {
    overflow: hidden !important;
    margin-right: 17px !important;
}

#view-settings > .ui.basic.segment {
    padding: 0;
}

#modal-settings > .ui.basic.segment {
    padding: 0;
}

body.dimmed .menu {
    margin-right: 17px !important;
}

.text-purple {
    color: magenta;
    font-weight: bold;
}

.white {
    color: white !important;
}

.padding-none {
    padding: 0 !important;
}

.modals {
    overflow-y: scroll !important;
}

.modals.fade.out {
    overflow: hidden !important;
}

.css-searchbar-fix {
    margin-top: 0.05em;
}

.css-searchbar-fix i.icon {
    margin-top: 0.05em !important;
}

.text-white label, .text-white .header, .text-white a {
    color: white !important;
}

.css-hidden {
    display: none !important;
}

.glow:hover {
    color: red !important;
    cursor: pointer !important;
}

.glow-y:hover {
    color: darkgreen !important;
    cursor: pointer !important;
}

.nopad {
    padding-top: 1.0em !important;
}

.nopad > .column {
    padding: 0.25em !important;
}

.text-green {
    color: green !important;
}

.sf-container {
    margin-bottom: 5em;
}

.dropdown-container {
    overflow: visible !important;
    position: relative !important;
}

.detail-top {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 5em;
}

.detail-top h1.header {
    color: white;
    margin-top: 0;
    padding-left: 0.25em;
}

.title-active {
    color: orange !important;
}

.detail-timestamp {
    color: white;
    position: absolute;
    top: 1.25em;
    right: 2em;
}

.detail-identifier {
    color: white;
    position: absolute;
    top: 2.75em;
    right: 2em;
    opacity: 40%;
}

.detail-top img {
    height: 5em;
    padding-left: 1em;
}

.detail-content {
    margin-top: 4em;
    font-size: 1.25em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.detail-entry {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding-top: 0.35em;
}

.detail-item {
    flex: 0 49%;
}

.detail-panel {
    flex: 0 33%;
    padding: 1em;
}

input:disabled {
    opacity: 1 !important;
}

#runes::placeholder {
    opacity: 1 !important;
    color: grey !important;
}

.muted {
    color: #505050 !important;
}

.field.npl {
    padding-left: 0 !important;
}

.field.npr {
    padding-right: 0 !important;
}

.margin-none-top {
    margin-top: 0 !important;
}

.margin-medium-top {
    margin-top: 1.0em !important;
}

.margin-medium-bottom {
    margin-bottom: 1.0em !important;
}

.padding-none-bottom {
    padding-bottom: 0 !important;
}

.margin-large-top {
    margin-top: 5.0em !important;
}

.css-small-row {
    padding-top: 0 !important;
    padding-bottom: 0.5em !important;
}

.css-template-buttons {
    height: 100% !important;
}

.css-template-list {
    margin-top: 1em !important;
}

.margin-none-bottom {
    margin-bottom: 0 !important;
}

.clickable {
    cursor: pointer !important;
}
/* ... */

